--- a/application/views/scripts/interface/index.phtml
+++ b/application/views/scripts/interface/index.phtml
@@ -63,6 +63,15 @@
     .interface-submit{
 	    width: 200px;
     }
+	.interface_params, .interface_results{
+		width: 100%;
+	}
+	.interface_params table, .interface_results table{
+		width: 100%;
+	}
+	.interface_params table th, .interface_results table th{
+		width: 16.6%;
+	}
 </style>
 <?php echo $this->render('./public/nav.phtml');?>
 
@@ -147,15 +156,26 @@
                                         <th>是否必填</th>
                                         <th>含义</th>
                                         <th>示例</th>
+										<th>操作</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
                                         <td>1</td>
-                                        <td>2</td>
+                                        <td class='select'>
+											<select name='params_type' style='width: 200px;' class="form-control">
+												<option value="1">int</option>
+												<option value="2">float</option>
+												<option value="3">string</option>
+												<option value="4">boolean</option>
+												<option value="5">array</option>
+												<option value="6">object</option>
+											</select>
+										</td>
                                         <td>3</td>
                                         <td>4</td>
                                         <td>5</td>
+										<td class='op'><a class='btn btn-default next-level'>下一级</a></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -171,15 +191,26 @@
                                         <th>一定存在</th>
                                         <th>含义</th>
                                         <th>示例</th>
+										<th>操作</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
                                         <td>1</td>
-                                        <td>2</td>
+                                        <td class='select'>
+											<select name='params_type' style='width: 200px;' class="form-control">
+												<option value="1">int</option>
+												<option value="2">float</option>
+												<option value="3">string</option>
+												<option value="4">boolean</option>
+												<option value="5">array</option>
+												<option value="6">object</option>
+											</select>
+										</td>
                                         <td>3</td>
                                         <td>4</td>
                                         <td>5</td>
+										<td class='op'><a class='btn btn-default next-level'>下一级</a></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -195,6 +226,56 @@
     <p data-type='1'>向上插入一行</p>
     <p data-type='2'>向下插入一行</p>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="dialogForParams" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">二级参数</h4>
+      </div>
+      <div class="modal-body">
+		<table class='table'>
+			<thead>
+				<tr>
+					<th>字段</th>
+					<th>类型</th>
+					<th>一定存在</th>
+					<th>含义</th>
+					<th>示例</th>
+					<th>操作</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>1</td>
+					<td class='select'>
+						<select name='params_type' style='width: 200px;' class="form-control">
+							<option value="1">int</option>
+							<option value="2">float</option>
+							<option value="3">string</option>
+							<option value="4">boolean</option>
+							<option value="5">array</option>
+							<option value="6">object</option>
+						</select>
+					</td>
+					<td>3</td>
+					<td>4</td>
+					<td>5</td>
+					<td class='op'><a class='btn btn-default next-level'>下一级</a></td>
+				</tr>
+			</tbody>
+		</table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary confirm-next">确定</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script type="text/javascript">
 	$(function() {
 		$('.tree-node-title').bind('click', function() {
@@ -215,6 +296,9 @@
 			$(this).addClass('active');
 		});
 		$('tr td').bind('click', function() {
+			if ($(this).filter('.op').length || $(this).filter('.select').length) {
+				return true;
+			}
 			$(this).prop('contenteditable', 'true');
 		});
 		$('tr td').bind('mouseup', function(e) {
@@ -251,6 +335,12 @@
 		        e.cancelBubble = true; //IE阻止冒泡方法
 		    }
 		});
+		$('.next-level').unbind('click').bind('click', function() {
+			$("#dialogForParams").modal({show: true});
+			$("#dialogForParams").on('shown.bs.modal', function (e) {
+				// alert(1);
+			})
+		});
 		$('.content-menu p').bind('click', function(e) {
 			e = e || window.event;
 		    if(e.stopPropagation) { //W3C阻止冒泡方法
@@ -261,14 +351,14 @@
 			var type = $(this).attr('data-type');
 			switch(type) {
 				case '1':
-					$('.' + $(this).parent().prop('data-ele')).before('<tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td></tr>');
+					$('.' + $(this).parent().prop('data-ele')).before('<tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td class="op"><a class="btn btn-default next-level">下一级</a></td></tr>');
 					$('tr td').unbind('click').bind('click', function() {
 						$(this).prop('contenteditable', 'true');
 					});
 					$('tr td').unbind('contextmenu').bind('contextmenu', contentMenuShow);
 					break;
 				case '2': 
-					$('.' + $(this).parent().prop('data-ele')).after('<tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td></tr>');
+					$('.' + $(this).parent().prop('data-ele')).after('<tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td class="op"><a class="btn btn-default next-level">下一级</a></td></tr>');
 					$('tr td').unbind('click').bind('click', function() {
 						$(this).prop('contenteditable', 'true');
 					});
@@ -284,60 +374,71 @@
 			var params = [];
 			var results = [];
 			$('.interface_params table tbody tr').each(function(i) {
+				// params[i] = [];
 				$(this).find('td').each(function(j) {
-					params[i] = [];
 					switch(j) {
 						case 0: 
-							params[i]['fieldName'] = $(this).html();
+							// params[i]['fieldName'] = $(this).html();
+							params.push({fieldName: $(this).html()});
 							break;
 						case 1: 
-							params[i]['fieldType'] = $(this).html();
+							// params[i]['fieldType'] = $(this).html();
+							params.push({fieldType: $(this).find('select').val()});
 							break;
 						case 2: 
-							params[i]['required'] = $(this).html();
+							// params[i]['required'] = $(this).html();
+							params.push({required: $(this).html()});
 							break;
 						case 3: 
-							params[i]['comment'] = $(this).html();
+							// params[i]['comment'] = $(this).html();
+							params.push({comment: $(this).html()});
 							break;
 						case 4: 
-							params[i]['case'] = $(this).html();
+							// params[i]['case'] = $(this).html();
+							params.push({case: $(this).html()});
 							break;
 					}
 				});
 			});
 
 			$('.interface_results table tbody tr').each(function(i) {
+				// results[i] = [];
 				$(this).find('td').each(function(j) {
-					results[i] = [];
-					console.log(j);
 					switch(j) {
 						case 0: 
-							results[i]['rFieldName'] = $(this).html();
-							console.log(results);
+							// results[i]['rFieldName'] = $(this).html();
+							results.push({rFieldName: $(this).html()});
 							break;
 						case 1: 
-							results[i]['rFieldType'] = $(this).html();
+						// console.log($(this).html());
+							// results[i]['rFieldType'] = $(this).html();
+							results.push({rFieldType: $(this).find('select').val()});
 							break;
 						case 2: 
-							results[i]['rRequired'] = $(this).html();
+						// console.log($(this).html());
+							// results[i]['rRequired'] = $(this).html();
+							results.push({rRequired: $(this).html()});
 							break;
 						case 3: 
-							results[i]['rComment'] = $(this).html();
+						// console.log($(this).html());
+							// results[i]['rComment'] = $(this).html();
+							results.push({rComment: $(this).html()});
 							break;
 						case 4: 
-							results[i]['rCase'] = $(this).html();
+						// console.log($(this).html());
+							// results[i]['rCase'] = $(this).html();
+							results.push({rCase: $(this).html()});
 							break;
 					}
 				});
 			});
-			console.log(params, results);
 			$.ajax({
 				url: '/interface/create',
 				data: {name: name, url: url, request_method: request_method, description: description, params: params, results: results},
 				dataType: 'json',
 				type: 'post',
 				success: function(data) {
-					
+					console.log(data);
 				},
 				error: function(err) {
 					
